# cloudbrain

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  agent.py  docker-compose.yml  ingestion.py  langgraph.json  pyproject.toml  server.py  terraform-repository.url
examples/llm/: README.md  __init__.py  code_interpreter_example.py  langchain_example.py  multi_provider_example.py  simple_example.py  streaming_example.py
examples/search/: simple_example.py
graph/: __init__.py  state.py  workflow_manager.py
graph/agents/: __init__.py  base_agent.py  generator.py  retriever.py  router.py  searcher.py
graph/config/: __init__.py  base_config.py  config.py
graph/config/variables/: __init__.py  base.py  default.py
graph/llm/: __init__.py  base.py  factory.py
graph/llm/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
graph/tools/: __init__.py  base.py  factory.py
graph/tools/providers/: tavily_provider.py
graph/utils/: views.py
